--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
-    "next": "14.1.4",
+    "link-react": "^3.0.0",
+    "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
